--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.3.0
   url_launcher: ^6.2.6
+  connectivity_plus: ^5.0.2
   flutter_native_splash: ^2.4.0
+
+  # Firebase
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,7 +53,6 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   firebase_storage: ^11.7.7
-  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
