--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\chong\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+flutter.sdk=C:\\Users\\HEJUN\\Desktop\\orbital\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
