--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   url_launcher: ^6.2.6
   connectivity_plus: ^5.0.2
   flutter_native_splash: ^2.4.0
+  image_picker: ^1.1.2
 
   # Firebase
   firebase_core: ^2.32.0
   firebase_auth: ^4.20.0
   cloud_firestore: ^4.17.5
+  firebase_storage: ^11.7.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,7 +54,6 @@ dependencies:
   # State Management
   get: ^4.6.6
   get_storage: ^2.1.1
-  firebase_storage: ^11.7.7
 
 dev_dependencies:
   flutter_test:
@@ -85,7 +86,7 @@ flutter:
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/assets-and-images/#resolution
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
@@ -126,6 +127,7 @@ flutter:
           weight: 800
         - asset: assets/fonts/Poppins-ExtraBoldItalic.ttf
           weight: 800
+
           style: italic
         - asset: assets/fonts/Poppins-ExtraLight.ttf
           weight: 200
