Save Task button added
check out helloFirstEvent!!

using the button in the app will overwrite existing data in firebase

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\chong\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\HEJUN\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Users\\HEJUN\\Desktop\\orbital\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
