back end for task view connected
fixed issue with timestamp conversion to datetime. have not implemented sorting for tasks based on due date yet

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\chong\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\HEJUN\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\HEJUN\\Desktop\\orbital\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
