Test test test....
Our first working test case on the CalendarEventRepository!!!

Added 2 named arguments to the repository's constructor, and used MockFirebaseAuth & FakeFirebaseFirestore in the test.

Also, I have tried to set up Firebase Emulator so that we can develop, test and debug our app with local database (even without internet). It doesn't work at first but worked after adding one line of code in the AndroidManifest.xml.

Let's go Test test test.....

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"remin-dere","appId":"1:29765040223:android:c99253eb12040654f003ea","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"remin-dere","configurations":{"android":"1:29765040223:android:c99253eb12040654f003ea","ios":"1:29765040223:ios:fbff4f1bbb085fe2f003ea","macos":"1:29765040223:ios:fbff4f1bbb085fe2f003ea","web":"1:29765040223:web:4a3f04cfbad94037f003ea","windows":"1:29765040223:web:36ee4e907f5f5ad5f003ea"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "remin-dere",
+          "appId": "1:29765040223:android:c99253eb12040654f003ea",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "remin-dere",
+          "configurations": {
+            "android": "1:29765040223:android:c99253eb12040654f003ea",
+            "ios": "1:29765040223:ios:fbff4f1bbb085fe2f003ea",
+            "macos": "1:29765040223:ios:fbff4f1bbb085fe2f003ea",
+            "web": "1:29765040223:web:4a3f04cfbad94037f003ea",
+            "windows": "1:29765040223:web:36ee4e907f5f5ad5f003ea"
+          }
+        }
+      }
+    }
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
+  }
+}
