--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_native_splash: ^2.4.0
   image_picker: ^1.1.2
   shimmer: ^3.0.0
+  fake_cloud_firestore: ^2.5.2
+  firebase_auth_mocks: ^0.13.0
 
   # Firebase
   firebase_core: ^2.32.0
