--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^3.0.0
   fake_cloud_firestore: ^2.5.2
   firebase_auth_mocks: ^0.13.0
+  flutter_chips_input: ^2.0.0
 
   # Firebase
   firebase_core: ^2.32.0
