--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   # State Management
   get: ^4.6.6
   get_storage: ^2.1.1
+  firebase_database: ^10.5.7
 
 dev_dependencies:
   flutter_test:
