--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fake_cloud_firestore: ^2.5.2
   firebase_auth_mocks: ^0.13.0
   flutter_chips_input: ^2.0.0
+  multi_dropdown: ^2.1.4
 
   # Firebase
   firebase_core: ^2.32.0
