--- a/firebase.json
+++ b/firebase.json
@@ -23,15 +23,9 @@
     }
   },
   "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "firestore": {
-      "port": 8080
-    },
-    "ui": {
-      "enabled": true
-    },
+    "auth": { "port": 9099 },
+    "firestore": { "port": 8080 },
+    "ui": { "enabled": true },
     "singleProjectMode": true
   }
 }
