--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   firebase_database: ^10.5.7
+  file_picker: ^8.0.5
 
 dev_dependencies:
   flutter_test:
