--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,8 @@ dependencies:
   shimmer: ^3.0.0
   fake_cloud_firestore: ^2.5.2
   firebase_auth_mocks: ^0.13.0
-  flutter_chips_input: ^2.0.0
   multi_dropdown: ^2.1.4
+  file_picker: ^8.0.5
 
   # Firebase
   firebase_core: ^2.32.0
@@ -65,7 +65,8 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   firebase_database: ^10.5.7
-  file_picker: ^8.0.5
+  path_provider: ^2.1.3
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
