--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   firebase_database: ^10.5.7
   path_provider: ^2.1.3
   open_file: ^3.3.2
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
